<resources>
    <string name="app_name">AdvertisementApp</string>
    <string name="menu_favourite">Favoritos</string>
    <string name="menu_housing">Viviendas</string>
    <string name="contentDescription_icon">icon</string>
    <string name="error_unknown">Error desconocido</string>
    <string name="error_internet">Error, no hay conexión a internet</string>
    <string name="error_server">Error en la conexión con el servidor</string>
    <string name="empty_advertisement">No hay ningún anuncio para mostrar</string>
    <string name="empty_favourites">No hay ningún anuncio favorito para mostrar</string>
    <string name="ok">OK</string>
    <string name="title_favourites">Favoritos</string>
    <string name="txt_piscina">Piscina</string>
    <string name="txt_terraza">Terraza</string>
    <string name="txt_trastero">Trastero</string>
    <string name="txt_garden">Jardín</string>
    <string name="add_favourite">Añadir a favoritos</string>
    <string name="txt_aire">Aire acondicionado</string>
    <string name="price_property">%1$s €</string>
    <string name="price_property_rent">%1$s €/mes</string>
    <string name="property_rooms">%1$s Habitaciones, %2$s m²</string>
    <string name="community_costs">Gastos comunitarios: %1$s €</string>
    <string name="room_number">%1$d habitaciones</string>
    <string name="bath_number">%1$d baños</string>
    <string name="exterior">Exterior</string>
    <string name="interior">Interior</string>
    <string name="housing_furnitures">Mobiliario: %1$s</string>
    <string name="agency_is_a_bank">Propiedad de un banco</string>
    <string name="not_a_bank">No es propiedad de un banco</string>
    <string name="energy_certification">Certificación energética: %1$s</string>
    <string name="floor">Planta: %1$s</string>
    <string name="constructed_area">Área construida: %1$d m²</string>
    <string name="with_lift">Con ascensor</string>
    <string name="without_lift">Sin ascensor</string>
    <string name="with_boxroom">Con trastero</string>
    <string name="without_boxroom">Sin trastero</string>
    <string name="is_duplex">Es dúplex</string>
    <string name="not_duplex">No es dúplex</string>
    <string name="reformed">Reformado</string>
    <string name="nuevo">Nuevo</string>
    <string name="status_not_specified">Estado: No especificado</string>
    <string name="see_location">Ver en mapa</string>
    <string name="contact">Contactar</string>
</resources>