<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        android:padding="16dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <!-- Imagen principal de la propiedad -->
            <ImageView
                android:id="@+id/property_thumbnail"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="12dp"
                android:scaleType="centerCrop"
                android:background="@drawable/rounded_image_background" />

            <!-- Contenedor de información de la propiedad -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:paddingStart="8dp">

                <!-- Título de la propiedad (dirección) -->
                <TextView
                    android:id="@+id/property_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="Calle de la Povedilla, Madrid"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <!-- Precio de la propiedad -->
                <TextView
                    android:id="@+id/property_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="sans-serif-medium"
                    tools:text="889,000 €"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="18sp" />

                <!-- Número de habitaciones y tamaño -->
                <TextView
                    android:id="@+id/property_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    tools:text="3 Rooms, 94 m²"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="14sp" />

                <!-- Descripción corta de la propiedad -->
                <TextView
                    android:id="@+id/property_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    tools:text="Este exclusivo piso cuenta con 3 habitaciones y una superficie de 94 m²..."
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <!-- Información de si tiene aire acondicionado -->
                <LinearLayout
                    android:id="@+id/air_conditioning_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/air_conditioning_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/aire" />

                    <TextView
                        android:id="@+id/air_conditioning_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_aire"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <!-- Información de si tiene piscina -->
                <LinearLayout
                    android:id="@+id/swimming_pool_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/swimming_pool_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/piscina" />

                    <TextView
                        android:id="@+id/swimming_pool_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_piscina"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <!-- Información de si tiene terraza -->
                <LinearLayout
                    android:id="@+id/terrace_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/terrace_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/terraza" />

                    <TextView
                        android:id="@+id/terrace_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_terraza"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <!-- Información de si tiene trastero -->
                <LinearLayout
                    android:id="@+id/box_room_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/box_room_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/trastero" />

                    <TextView
                        android:id="@+id/box_room_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_trastero"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <!-- Información de si tiene jardín -->
                <LinearLayout
                    android:id="@+id/garden_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:gravity="start"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/garden_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/garden" />

                    <TextView
                        android:id="@+id/garden_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_garden"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <!-- Sección de favoritos -->
                <LinearLayout
                    android:id="@+id/favorites_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/star_icon"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/star" />

                    <TextView
                        android:id="@+id/data_added"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_favourite"
                        android:textColor="@android:color/black"
                        android:textSize="14sp"
                        android:layout_gravity="center"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
